--- a/snake.yml
+++ b/snake.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: Sutil/snk@master
         id: snake-gif
         with:
-          github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake2.svg
+          github_user_name: Marcos26-tech
+          svg_out_path: dist/github-contribution-grid-snake.svg
           snake_color: 'blue'
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
